# magma

./: .clang-format  .fockerignore
.circleci/: config.yml
ci-scripts/: JenkinsFile-GitLab  JenkinsFile-LTE-integ-test  adapt-spgwc-pool-ip.sed  adapt-spgwu-pool-ip.sed
ci-scripts/teravm/: fabfile.py
circleci/: fabfile.py
cn/deploy/scripts/: MVC2_5G_Orc8r_deployment_script.py
cwf/gateway/: Vagrantfile  fabfile.py
cwf/gateway/configs/: gateway.mconfig  pipelined.yml  policydb.yml
cwf/gateway/deploy/: hosts
cwf/gateway/integ_tests/: gateway.mconfig  gateway.mconfig.idle_timer  gateway.mconfig.multi_session_proxy  pipelined.yml  test_runner.go
docs/readmes/basics/: quick_start_guide.md
docs/readmes/lte/: debug_dp_probe.md  eventd.md
fbinternal/cloud/: dev.env
feg/gateway/mconfig_test/: mconfig_test.go
feg/gateway/tools/gy_client_cli/: main.go
lte/gateway/: Makefile  Vagrantfile  dev_tools.py  fabfile.py
lte/gateway/c/core/oai/lib/gtpv2c/: 3gpp_29.274-compat.h  3gpp_29.274.cpp  3gpp_29.274cc.h  CMakeLists.txt  gtpv2c.cpp  gtpv2c.h  msg_gtpv2c.h  serializable.h
lte/gateway/c/oai/: CMakeLists.txt
lte/gateway/c/sctpd/: CMakeLists.txt  util.cpp
lte/gateway/c/session_manager/: SessionStateEnforcer.cpp
lte/gateway/configs/: dnsmasq.conf  gateway.mconfig  mme.yml  pipelined.yml  pipelined.yml_prod  policydb.yml
lte/gateway/deploy/: agw_ovs_user_space.sh  hosts
lte/protos/oai/: nas_state.proto
orc8r/tools/fab/: hosts.py
scripts/: openssl.cnf
xwf/docker/: docker-compose.yml
xwf/gateway/configs/: gateway.mconfig  pipelined.yml
(+239 files in other folders)
